--- a/TamagotchiApp/TamagotchiApp/App.xaml
+++ b/TamagotchiApp/TamagotchiApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TamagotchiApp"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="AccountsWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
