--- a/TamagotchiApp/TamagotchiApp/NewAnimal.xaml
+++ b/TamagotchiApp/TamagotchiApp/NewAnimal.xaml
@@ -7,6 +7,18 @@
         mc:Ignorable="d"
         Title="NewAnimal" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Content="Add new animal" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6"/>
+        <Button x:Name="AddAnimal" FontSize="25" FontWeight="Bold" Content="Add new Animal" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Width="250" Height="60" Background="Orange" Click="Addanimal_Click"/>
+        <TextBox x:Name="username" Grid.Column="0" Grid.Row="1" Width="200" Height="40"/>
+        <TextBox x:Name="password" Grid.Column="1" Grid.Row="1" Width="200" Height="40"/>
     </Grid>
 </Window>
