--- a/TamagotchiApp/TamagotchiApp/AccountsWindow.xaml
+++ b/TamagotchiApp/TamagotchiApp/AccountsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TamagotchiApp.AccountsWindow"
+﻿<Window x:Class="TamagotchiApp.AccountsWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,6 +7,22 @@
         mc:Ignorable="d"
         Title="AccountsWindow" Height="450" Width="800">
     <Grid Background="#FF851E1E">
-        <ListBox x:Name="list" Width="500" Height="200"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label Content="Accounts manager" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6"/>
+        <Label Content="Account id:" Grid.Row="1"  Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="top" Height="40"  FontSize="20" FontWeight="Bold"/>
+        <Button x:Name="Deleteaccount" FontSize="25" FontWeight="Bold" Content="Delete account" Grid.Column="1" Grid.Row="1" Width="200" Height="60" Background="Orange" Click="Deleteaccount_Click"/>
+        <Button x:Name="Showall" FontSize="25" FontWeight="Bold" Content="Show all accounts" Grid.Column="1" Grid.Row="2" Width="250" Height="70" Background="Orange" Click="showallacc_Click"/>
+        <TextBox x:Name="accountid" Grid.Column="0" Grid.Row="1" Width="200" Height="40"/>
+        <ListBox x:Name="list" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3"/>
     </Grid>
 </Window>
