--- a/TamagotchiApp/TamagotchiApp/MainWindow.xaml
+++ b/TamagotchiApp/TamagotchiApp/MainWindow.xaml
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
         <Label Content="Welcome to the Admin interface" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6"/>
         <Button x:Name="NewAnimal" FontSize="25" FontWeight="Bold" Content="New Animal" Grid.Column="0" Grid.Row="1" Width="200" Height="40" Background="Orange" Click="NewAnimal_Click"/>
-        <Button x:Name="AllAccount" FontSize="25" FontWeight="Bold" Content="All Account" Grid.Column="2" Grid.Row="1" Width="200" Height="40" Background="Orange" Click="AllAccount_Click" />
+        <Button x:Name="AllAccounts" FontSize="25" FontWeight="Bold" Content="All Accounts" Grid.Column="2" Grid.Row="1" Width="200" Height="40" Background="Orange" Click="AllAccount_Click" />
         
     </Grid>
 </Window>
