--- a/TamagotchiApp/TamagotchiApp/AccountsWindow.xaml
+++ b/TamagotchiApp/TamagotchiApp/AccountsWindow.xaml
@@ -18,11 +18,12 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Content="Accounts manager" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6"/>
-        <Label Content="Account id:" Grid.Row="1"  Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="top" Height="40"  FontSize="20" FontWeight="Bold"/>
+        <Label Content="Accounts manager" Grid.Row="0" Grid.ColumnSpan="3" FontSize="25" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6" FontWeight="Bold"/>
+        <Label Content="Account id" Grid.Row="1"  Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="top" Height="40"  FontSize="20" FontWeight="Bold"/>
         <Button x:Name="Deleteaccount" FontSize="25" FontWeight="Bold" Content="Delete account" Grid.Column="1" Grid.Row="1" Width="200" Height="60" Background="Orange" Click="Deleteaccount_Click"/>
-        <Button x:Name="Showall" FontSize="25" FontWeight="Bold" Content="Show all accounts" Grid.Column="1" Grid.Row="2" Width="250" Height="70" Background="Orange" Click="showallacc_Click"/>
+        <Button x:Name="Showall" FontSize="25" FontWeight="Bold" Content="Show all accounts" Grid.Column="0" Grid.Row="2" Width="250" Height="50" Background="Orange" Click="showallacc_Click"/>
         <TextBox x:Name="accountid" Grid.Column="0" Grid.Row="1" Width="200" Height="40"/>
         <ListBox x:Name="list" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3"/>
+        <Button x:Name="back" FontSize="25" FontWeight="Bold" Content="Back" Grid.Column="2" Grid.Row="2" Width="150" Height="50" Background="Orange" Click="back_Click"/>
     </Grid>
 </Window>
