--- a/TamagotchiApp/TamagotchiApp/LoginWindow.xaml
+++ b/TamagotchiApp/TamagotchiApp/LoginWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="LoginWindow" Height="450" Width="800">
 
-    <Grid>
+    <Grid Background="#FFD7EA98">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -19,9 +19,11 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label Content="Login with admin" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6"/>
+        <Label Content="Login with admin" FontWeight="Bold" Grid.Row="0" Grid.ColumnSpan="3" FontSize="20" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40" Opacity="0.6"/>
         <Button x:Name="login" FontSize="25" FontWeight="Bold" Content="Login" Grid.Column="1" Grid.Row="3" Width="200" Height="40" Background="Orange" Click="Login_Click"/>
+        <Label Content="Username" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"/>
         <TextBox x:Name="username" Grid.Column="1" Grid.Row="1" Width="200" Height="40"/>
+        <Label Content="Password" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontWeight="Bold" FontSize="20"/>
         <TextBox x:Name="password" Grid.Column="1" Grid.Row="2" Width="200" Height="40"/>
     </Grid>
     
